Generate tracing instrumentation for drops

--- a/crates/cxx-clang/Cargo.toml
+++ b/crates/cxx-clang/Cargo.toml
@@ -6,6 +6,9 @@ authors = ["silvanshade <silvanshade@users.noreply.github.com>"]
 license = "Apache-2.0 WITH LLVM-exception"
 repository = "https://github.com/silvanshade/cxx-clang"
 
+[features]
+debug = ["tracing"]
+
 [build-dependencies]
 cxx-llvm-common = { version = "0.0", path = "../../../cxx-llvm-common" }
 cxx-clang-abi = { version = "0.0", path = "../cxx-clang-abi" }
@@ -15,6 +18,7 @@ cxx = { version = "1.0", features = ["c++20"] }
 cxx-memory = { version = "0.0", path = "../../../cxx-memory" }
 cxx-memory-abi = { version = "0.0", path = "../../../cxx-memory-abi" }
 cxx-clang-abi = { version = "0.0", path = "../cxx-clang-abi" }
+tracing = { version = "0.1", optional = true }
 
 [dev-dependencies]
 static_assertions = "1.1"
