--- a/crates/cxx-clang/Cargo.toml
+++ b/crates/cxx-clang/Cargo.toml
@@ -16,8 +16,8 @@ cxx-clang-abi = { version = "0.0", path = "../cxx-clang-abi" }
 [dependencies]
 cxx = { version = "1.0", features = ["c++20"] }
 cxx-llvm = { version = "0.0", path = "../../../cxx-llvm/crates/cxx-llvm" }
-cxx-memory = { version = "0.0", path = "../../../cxx-memory" }
-cxx-memory-abi = { version = "0.0", path = "../../../cxx-memory-abi" }
+cxx-memory = { version = "0.0", path = "../../../cxx-memory/crates/cxx-memory" }
+cxx-memory-abi = { version = "0.0", path = "../../../cxx-memory/crates/cxx-memory-abi" }
 cxx-clang-abi = { version = "0.0", path = "../cxx-clang-abi" }
 tracing = { version = "0.1", optional = true }
 
