--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,32 +9,28 @@ set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
 # ensure that the C++ compiler is `clang++`
 set(CMAKE_CXX_COMPILER "clang++")
 
-add_library(cxx-clang STATIC
+add_library(cxx-clang-abi STATIC
   crates/cxx-clang-abi/cxx/lib/cmake.cxx
 )
-target_compile_definitions(cxx-clang PUBLIC LLVM_DISABLE_ABI_BREAKING_CHECKS_ENFORCING)
-target_include_directories(cxx-clang PUBLIC
-  ../cxx-memory-abi/..
-  crates
-  cxx/include
+target_include_directories(cxx-clang-abi PUBLIC
+  ../cxx-clang/crates/cxx-clang-abi/..
+  ../cxx-llvm/crates/cxx-llvm-abi/..
+  ../cxx-memory/crates/cxx-memory-abi/..
   target/cxxbridge
-  target/cxxbridge/rust
   ../swift-project/build/Ninja-ReleaseAssert/llvm-linux-x86_64/include
   ../swift-project/build/Ninja-ReleaseAssert/llvm-linux-x86_64/tools/clang/include
-  ../swift-project/build/Ninja-ReleaseAssert/swift-linux-x86_64/include
   ../swift-project/llvm-project/clang/include
   ../swift-project/llvm-project/llvm/include
-  ../swift-project
-  ../swift-project/swift/include
-  ../swift-project/swift/stdlib/public/SwiftShims
 )
-target_compile_options(cxx-clang PUBLIC
-  -std=gnu++2b
+target_compile_definitions(cxx-clang-abi PUBLIC _LIBCPP_ENABLE_THREAD_SAFETY_ANNOTATIONS)
+target_compile_options(cxx-clang-abi PUBLIC
+  -std=gnu++20
   # -stdlib=libc++
-  # -lc++abi
   -Werror
   -Wall
   -Wextra
+  -Wthread-safety
+  -Wthread-safety-beta
   -pedantic
   -Wno-ambiguous-reversed-operator
   -Wno-deprecated-anon-enum-enum-conversion
