Define cxx-clang-build and refactor build scripts

--- a/crates/cxx-clang-abi/Cargo.toml
+++ b/crates/cxx-clang-abi/Cargo.toml
@@ -10,11 +10,12 @@ links = "cxx-clang-abi"
 
 [build-dependencies]
 cxx-build = { version = "1.0", features = ["parallel"] }
-cxx-llvm-common = { version = "0.0", git = "https://github.com/silvanshade/cxx-llvm-common" }
+cxx-llvm-build = { version = "0.0", git = "https://github.com/silvanshade/cxx-llvm" }
+cxx-llvm-build-common = { version = "0.0", git = "https://github.com/silvanshade/cxx-llvm" }
+cxx-clang-build = { version = "0.0", path = "../cxx-clang-build" }
 cxx-memory-abi = { version = "0.0", git = "https://github.com/silvanshade/cxx-memory" }
 
 [dependencies]
 cxx = { version = "1.0", features = ["c++20"] }
 cxx-llvm-abi = { version = "0.0", git = "https://github.com/silvanshade/cxx-llvm" }
-cxx-llvm-common = { version = "0.0", git = "https://github.com/silvanshade/cxx-llvm-common" }
 cxx-memory-abi = { version = "0.0", git = "https://github.com/silvanshade/cxx-memory" }
