--- a/crates/cxx-clang/Cargo.toml
+++ b/crates/cxx-clang/Cargo.toml
@@ -10,7 +10,9 @@ repository = "https://github.com/silvanshade/cxx-clang"
 debug = ["tracing"]
 
 [build-dependencies]
-cxx-llvm-common = { version = "0.0", git = "https://github.com/silvanshade/cxx-llvm-common" }
+cxx-llvm-build = { version = "0.0", git = "https://github.com/silvanshade/cxx-llvm" }
+cxx-llvm-build-common = { version = "0.0", git = "https://github.com/silvanshade/cxx-llvm" }
+cxx-clang-build = { version = "0.0", path = "../cxx-clang-build" }
 cxx-clang-abi = { version = "0.0", path = "../cxx-clang-abi" }
 
 [dependencies]
