Update crate descriptions

--- a/crates/cxx-clang-auto/Cargo.toml
+++ b/crates/cxx-clang-auto/Cargo.toml
@@ -5,6 +5,7 @@ version = "0.0.0"
 authors = ["silvanshade <silvanshade@users.noreply.github.com>"]
 license = "Apache-2.0 WITH LLVM-exception"
 repository = "https://github.com/silvanshade/cxx-clang"
+description = "cxx-auto generated cxx bindings for cxx-clang"
 # NOTE: `links` is needed so that `cxx/include/**/*.hxx` is exported to dependencies
 links = "cxx-clang-auto"
 
