--- a/crates/cxx-clang-build/Cargo.toml
+++ b/crates/cxx-clang-build/Cargo.toml
@@ -5,6 +5,7 @@ version = "0.0.0"
 authors = ["silvanshade <silvanshade@users.noreply.github.com>"]
 license = "Apache-2.0 WITH LLVM-exception"
 repository = "https://github.com/silvanshade/cxx-clang"
+description = "Common build code for cxx-clang"
 
 [dependencies]
 cxx-build = { version = "1.0", features = ["parallel"] }
