Fix patch paths

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,9 +8,9 @@ members = [
 ]
 
 # [patch.crates-io]
-# cxx-auto = { path = "../../../cxx-auto" }
-# cxx-llvm = { path = "../../../cxx-llvm/crates/cxx-llvm" }
-# cxx-llvm-auto = { path = "../../../cxx-llvm/crates/cxx-llvm-auto" }
-# cxx-llvm-build = { path = "../../../cxx-llvm/crates/cxx-llvm-build" }
-# cxx-llvm-build-common = { path = "../../../cxx-llvm/crates/cxx-llvm-build-common" }
-# moveref = { path = "../../../moveref" }
+# cxx-auto = { path = "../cxx-auto" }
+# cxx-llvm = { path = "../cxx-llvm/crates/cxx-llvm" }
+# cxx-llvm-auto = { path = "../cxx-llvm/crates/cxx-llvm-auto" }
+# cxx-llvm-build = { path = "../cxx-llvm/crates/cxx-llvm-build" }
+# cxx-llvm-build-common = { path = "../cxx-llvm/crates/cxx-llvm-build-common" }
+# moveref = { path = "../moveref" }
